planet alignments fixed (without traversal)

--- a/design-system/src/controls/common.css
+++ b/design-system/src/controls/common.css
@@ -14,6 +14,12 @@
   right: 1rem;
 }
 
+.vis-controls-container {
+  height: 0;
+  position: relative;
+  bottom: 18.5rem;
+}
+
 .overlay-controls-container {
   bottom: 100%;
   pointer-events: auto;
