--- a/ui/src/components/vis/vis.css
+++ b/ui/src/components/vis/vis.css
@@ -4,7 +4,6 @@ g.nodes {
 }
 
 .node-subgroup {
-  transform: scale(1.5) translate(-62px, -52px);
   color: #ccc;
 }
 
